
# Packages
#find_package(Threads)

# Sources
file(GLOB rtype_base_src
    ../AResourceInfo.hpp
    ../IGame.hpp
    ../IServerProxy.hpp
    ../AResourceInfo.cpp
    ../common/AInteraction.hpp
    ../common/AnimationResourceInfo.hpp
    ../common/BasicGame.hpp
    ../common/BasicPlayer.hpp
    ../common/Circle.hpp
    ../common/Clock.hpp
    ../common/EntityManager.hpp
    ../common/InteractionManager.hpp
    ../common/Item.hpp
    ../common/ItemManager.hpp
    ../common/LuaResourceInfo.hpp
    ../common/PlayerManager.hpp
    ../common/Point.hpp
    ../common/QuadTree.hpp
    ../common/Rect.hpp
    ../common/ResourceManager.hpp
    ../common/Shape.hpp
    ../common/SoundResourceInfo.hpp
    ../common/AnimationResourceInfo.cpp
    ../common/BasicPlayer.cpp
    ../common/Circle.cpp
    ../common/Clock.cpp
    ../common/Item.cpp
    ../common/LuaResourceInfo.cpp
    ../common/Point.cpp
    ../common/Rect.cpp
    ../common/Shape.cpp
    ../common/SoundResourceInfo.cpp
    ../../threadsabstract/Mutex.hpp
    ../../threadsabstract/ScopeLock.hpp
    ../../threadsabstract/Thread.hpp
    ../../threadsabstract/Mutex.cpp
    ../../threadsabstract/Thread.cpp
    ../../../common/Constants.hpp
    ../../../common/Log.hpp
    ../../../common/Packet.hpp
    ../../../common/String.hpp
    ../../../common/Packet.cpp
    ../../../common/String.cpp
    MenuEntity.hpp
    GameEntity.hpp
    Game.hpp
    GamePlayer.hpp
    MainGame.hpp
    MenuPlayer.hpp
    Utils.hpp
    MenuEntity.cpp
    GameEntity.cpp
    Game.cpp
    GamePlayer.cpp
    GetGameInstance.cpp
    MainGame.cpp
    MenuPlayer.cpp
    Utils.cpp
    TextEntity.hpp
    ButtonEntity.hpp
    MainMenuEntity.hpp
    BackgroundEntity.hpp
    PlayerEntity.hpp
    ForceEntity.hpp
    RoomEntity.hpp
    Map1Entity.hpp
    FileMapEntity.hpp
    MissileEntity.hpp
    MissileLauncherMobEntity.hpp
    ParticleGeneratorEntity.hpp
    TimerEntity.hpp
    LuaMissileEntity.hpp
    ButtonEntity.cpp
    MainMenuEntity.cpp
    BackgroundEntity.cpp
    PlayerEntity.cpp
    ForceEntity.cpp
    RoomEntity.cpp
    Map1Entity.cpp
    FileMapEntity.cpp
    MissileEntity.cpp
    MissileLauncherMobEntity.cpp
    ParticleGeneratorEntity.cpp
    TimerEntity.cpp
    LuaMissileEntity.cpp
    ADamageInteraction.hpp
    EnemyDamageInteraction.hpp
    FriendlyDamageInteraction.hpp
    BonusInteraction.hpp
    ForceAttachInteraction.hpp
    ForceControlInteraction.hpp
    ForceFireInteraction.hpp
    ShieldInteraction.hpp
    RepulseInteraction.hpp
    ShipEntity.hpp
    WallEntity.hpp
    WallGeneratorEntity.hpp
    MapEntity.hpp
    EnduranceMap1Entity.hpp
    MonsterEntity.hpp
    WeakMobEntity.hpp
    LittleRobotMobEntity.hpp
    MonsterInteraction.hpp
    ShipInteraction.hpp
    WallInteraction.hpp
    MonsterGeneratorEntity.hpp
    BulletEntity.hpp
    FriendlyBulletEntity.hpp
    EnemyBulletEntity.hpp
    GarbageSpawnerEntity.hpp
    GarbageEntity.hpp
    TriggerInteraction.hpp
    ForceUpgradeInteraction.hpp
    ForceDowngradeInteraction.hpp
    BonusEntity.hpp
    BoingLaserEntity.hpp
    ExplosiveEntity.hpp
    FlameEntity.hpp
    Boss1Entity.hpp
    Boss1Node.hpp
    BossBulletEntity.hpp
    BgTileEntity.hpp
    BonusCarrierMobEntity.hpp
    ADamageInteraction.cpp
    EnemyDamageInteraction.cpp
    FriendlyDamageInteraction.cpp
    BonusInteraction.cpp
    ForceAttachInteraction.cpp
    ForceControlInteraction.cpp
    ForceFireInteraction.cpp
    ShieldInteraction.cpp
    RepulseInteraction.cpp
    ShipEntity.cpp
    WallEntity.cpp
    WallGeneratorEntity.cpp
    MapEntity.cpp
    EnduranceMap1Entity.cpp
    MonsterEntity.cpp
    WeakMobEntity.cpp
    LittleRobotMobEntity.cpp
    MonsterInteraction.cpp
    ShipInteraction.cpp
    WallInteraction.cpp
    MonsterGeneratorEntity.cpp
    BulletEntity.cpp
    FriendlyBulletEntity.cpp
    EnemyBulletEntity.cpp
    GarbageSpawnerEntity.cpp
    GarbageEntity.cpp
    TriggerInteraction.cpp
    ForceUpgradeInteraction.cpp
    ForceDowngradeInteraction.cpp
    BonusEntity.cpp
    BoingLaserEntity.cpp
    ExplosiveEntity.cpp
    FlameEntity.cpp
    Boss1Entity.cpp
    Boss1Node.cpp
    BossBulletEntity.cpp
    BgTileEntity.cpp
    BonusCarrierMobEntity.cpp
    )


if (UNIX)

else(UNIX)
    set(INCLUDE_DIR ../../../windows)
endif(UNIX)

include_directories(
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${INCLUDE_DIR}
    ../common
    ../../logic
    ../../networkabstract
    ../../threadsabstract
    ../../console
    ../../games
    ../../../common
    ../../../b00st
    .)

list(APPEND
    rtype_src
    ${rtype_base_src}
    )
add_library(rtype SHARED
    ${rtype_src}
    )

set(LIBRARY_OUTPUT_PATH ..)

target_link_libraries(rtype
    ${CMAKE_THREAD_LIBS_INIT}
    ${MOAR_LIB}
    ${NETWORK_LIB}
    )
